# uecs-ccm-mcp

./: .gitignore  README.md  pyproject.toml
docs/: actuator_duration_control_design.md
scripts/: ccm_bridge.py  ccm_receive_test.py  ccm_send_test.py  wh65lp_reader.py
src/uecs_ccm_mcp/: __init__.py  cache.py  ccm_protocol.py  ccm_receiver.py  ccm_sender.py  server.py
tests/: test_cache.py  test_ccm_protocol.py  test_ccm_sender.py  test_server.py  test_wh65lp_protocol.py
