[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uecs-ccm-mcp"
version = "0.1.0"
description = "MCP server for UECS-CCM greenhouse control protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    { name = "Yasunori Oi" },
]
keywords = ["uecs", "ccm", "mcp", "greenhouse", "agriculture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
uecs-ccm-mcp = "uecs_ccm_mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/uecs_ccm_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
